[metadata]
name = df_torchdata
version = attr: df_torchdata.VERSION
description = A package of torchdata pipelines indexed by a pandas dataframe,
    including support for few-shot-style datasets.
long_description = file: README.md
keywords = data, pipelines, torchdata
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   numpy
   pandas
   scikit-learn
   
[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.extras_require]

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
